@@ -104,9 +104,9 @@ INTERMediatorLib.addEvent(window, "load", function () {
     }
     errorNode = document.getElementById(INTERMediatorOnPage.nonSupportMessageId);
 
-    if (INTERMediatorOnPage.dbClassName === "DB_FileMaker_FX") {
-        INTERMediator_DBAdapter.eliminateDuplicatedConditions = true;
-    }
+    //if (INTERMediatorOnPage.dbClassName === "DB_FileMaker_FX") {
+    //    INTERMediator_DBAdapter.eliminateDuplicatedConditions = true;
+    //}
 
     if (INTERMediatorOnPage.isAutoConstruct) {
         if (errorNode) {
