@@ -43,6 +43,8 @@ class DB_FMS_FX_Test extends DB_FMS_Test_Common
                 'records' => 1000,
                 'paging' => true,
                 'name' => 'person',
+                'view' => 'person_layout',
+                'table' => 'person_layout',
                 'key' => 'id',
                 'query' => array( /* array( 'field'=>'id', 'value'=>'5', 'operator'=>'eq' ),*/),
                 'sort' => array(array('field' => 'id', 'direction' => 'asc'),),
