@@ -1,1 +1,1 @@
-{"version":"5.4-dev","releasedate":"2016-06-25"}
+{"version":"5.4-dev","releasedate":"2016-07-02"}
